fixed whitespace on right

--- a/src/front/styles/waist_and_length.css
+++ b/src/front/styles/waist_and_length.css
@@ -32,6 +32,7 @@
 .size-radio input {
     position: absolute;
     opacity: 0;
+    left: 0;
 }
 
 .size-radio input + div {
@@ -64,6 +65,7 @@ outline: 1px solid black;
 @media (max-width: 450px) {
     .waist-length-container {
         margin-left: 5vw;
+        max-width: 100vw;
     }
 
     .size-radio {
